--- a/source/NAMESPACE
+++ b/source/NAMESPACE
@@ -1,8 +1,9 @@
 useDynLib(SUITOR)
 import(stats)
 import(utils)
-importFrom("graphics", "legend", "plot", "points")
+importFrom("graphics", "legend", "plot", "points", "abline", "axis", "box")
 import(doParallel)
 import(foreach)
 import(parallel)
-export(suitor, getSummary, plotErrors)
+import(ggplot2)
+export(suitor, getSummary, plotErrors, suitor_extract_WH)
